# nomad-driver-wasm

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  go.mod  nomad-driver-wasm.hcl  release.sh
demos/hello-world-wasm/: Cargo.toml  README.md  hello-world-wasm.nomad  ipsum.txt
demos/hello-world-wasm/src/: main.rs
src/: client.rs  driver.rs  hclext.rs  main.rs  plugin.rs  server.rs  task.rs  wasi.rs
src/driver/: config.rs  driver.rs  plugin.rs
src/fingerprint/: arch.rs  cgroup.rs  cni.rs  consul.rs  cpu.rs  fingerprinter.rs  health.rs  host.rs  memory.rs  mod.rs  network.rs  nomad.rs  signal.rs  storage.rs  vault.rs
src/proto/: driversext.rs  google.protobuf.rs  hashicorp.nomad.plugins.base.proto.rs  hashicorp.nomad.plugins.drivers.proto.rs  hashicorp.nomad.plugins.shared.hclspec.rs  hashicorp.nomad.plugins.shared.structs.rs  hclext.rs  mod.rs
