[package]
name = "nomad-driver-wasmtime"
version = "0.1.0"
authors = ["DerekStrickland <1111455+DerekStrickland@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
tonic = "0.5.2"
prost = "0.8.0"
prost-types = "0.8.0"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.5.2"
prost = "0.8.0"
prost-build = "0.8.0"
prost-types = "0.8.0"
protoc-rust = "2.0"

[patch.crates-io]
prost = { git = "https://github.com/cab/prost", branch = "default-core" }