[package]
name = "nomad-driver-wasm"
version = "0.1.0"
authors = ["DerekStrickland <1111455+DerekStrickland@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-stream = "0.2"
env_logger = "0.9.0"
futures-core = "0.3"
futures-util = "0.3"
log = "0.4.14"
log4rs = "1.0.0"
oci-distribution = "0.8.0"
prost = "0.8.0"
prost-types = "0.8.0"
rmp-serde = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-info = "0.9"
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tokio-test = "0.4.2"
tonic = "0.5.2"
tonic-health = "0.4.1"
wasi-provider = "1.0.0"
wasmtime = "0.30.0"

[build-dependencies]
prost = "0.8.0"
prost-build = "0.8.0"
protoc-rust = "2.0"
tonic-build = "0.5.2"
prost-types = "0.8.0"

#[patch.crates-io]
# prost = { git = "https://github.com/cab/prost", branch = "default-core" }
#prost = { git = "https://github.com/tokio-rs/prost", rev = "b7e4846dbcb52aeb8defbfde4605b1b975a1504d"}
## prost = { path = '../prost' }
#prost-build = { path = '../prost/prost-build', default-features = false }
wasi-provider = { path = '../krustlet/crates/wasi-provider' }

[patch.crates-io]
prost = { git = "https://github.com/tokio-rs/prost" }
#prost-build = { git = "https://github.com/tokio-rs/prost" }
prost-build = { path = "../prost/prost-build" }
tonic-build = { path = '../tonic/tonic-build' }

# server binary
[[bin]]
name = "nomad-driver-wasm"
path = "src/server.rs"

# client binary
[[bin]]
name = "client"
path = "src/client.rs"